// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LibraryAsset context provider should provide currentWML 1`] = `
"
<Asset key=(Test) fileName=\\"test\\">
    <Import from=(BASE)>
        <Use key=(basePower) type=\\"Variable\\" as=(power) />
        <Use key=(DEF) type=\\"Room\\" />
    </Import>
    <Feature key=(clockTower)>
        <Description>
            A worn stone clock tower.
        </Description>
    </Feature>
    <Room key=(ABC)>
        <Name>Vortex</Name>
        <Description>
            Vortex
            <Link to=(toggleOpen)>(toggle)</Link>
        </Description>
        <Exit from=(DEF)>vortex</Exit>
    </Room>
    <Condition if={open}>
        <Depend on=(open) />
        <Room key=(ABC)>
            <Exit to=(DEF)>welcome</Exit>
        </Room>
    </Condition>
    <Room key=(DEF)>
        <Name>Welcome</Name>
    </Room>
    <Variable key=(open) default={false} />
    <Action key=(toggleOpen) src={open = !open} />
</Asset>
"
`;

exports[`LibraryAsset context provider should provide features 1`] = `
<div>
  <div>
    <div>
      <span />
      <span>
        String
      </span>
      <span>
        A worn stone clock tower.
      </span>
    </div>
  </div>
</div>
`;

exports[`LibraryAsset context provider should provide normalForm 1`] = `
"{
    \\"Test\\": {
        \\"key\\": \\"Test\\",
        \\"tag\\": \\"Asset\\",
        \\"instance\\": false,
        \\"Story\\": false,
        \\"fileName\\": \\"test\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [],
                \\"location\\": [
                    0
                ],
                \\"contents\\": [
                    {
                        \\"key\\": \\"Import-0\\",
                        \\"tag\\": \\"Import\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"clockTower\\",
                        \\"tag\\": \\"Feature\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"ABC\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"DEF\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 1
                    },
                    {
                        \\"key\\": \\"Condition-0\\",
                        \\"tag\\": \\"Condition\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"DEF\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 2
                    },
                    {
                        \\"key\\": \\"open\\",
                        \\"tag\\": \\"Variable\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"toggleOpen\\",
                        \\"tag\\": \\"Action\\",
                        \\"index\\": 0
                    }
                ]
            }
        ]
    },
    \\"Import-0\\": {
        \\"key\\": \\"Import-0\\",
        \\"tag\\": \\"Import\\",
        \\"from\\": \\"BASE\\",
        \\"mapping\\": {
            \\"power\\": {
                \\"key\\": \\"basePower\\",
                \\"type\\": \\"Variable\\"
            },
            \\"DEF\\": {
                \\"key\\": \\"DEF\\",
                \\"type\\": \\"Room\\"
            }
        },
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ],
                \\"location\\": [
                    0,
                    0
                ],
                \\"contents\\": [
                    {
                        \\"key\\": \\"power\\",
                        \\"tag\\": \\"Variable\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"DEF\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 0
                    }
                ]
            }
        ]
    },
    \\"power\\": {
        \\"key\\": \\"power\\",
        \\"tag\\": \\"Variable\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"Import-0\\",
                        \\"tag\\": \\"Import\\",
                        \\"index\\": 0
                    }
                ],
                \\"location\\": [
                    0,
                    0,
                    0
                ],
                \\"contents\\": []
            }
        ]
    },
    \\"DEF\\": {
        \\"key\\": \\"DEF\\",
        \\"tag\\": \\"Room\\",
        \\"global\\": false,
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    },
                    {
                        \\"key\\": \\"Import-0\\",
                        \\"tag\\": \\"Import\\",
                        \\"index\\": 0
                    }
                ],
                \\"location\\": [
                    0,
                    0,
                    1
                ],
                \\"contents\\": [],
                \\"render\\": [],
                \\"name\\": \\"\\",
                \\"spaceAfter\\": false,
                \\"spaceBefore\\": false
            },
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ],
                \\"location\\": [],
                \\"contents\\": [
                    {
                        \\"tag\\": \\"Exit\\",
                        \\"key\\": \\"DEF#ABC\\",
                        \\"index\\": 0
                    }
                ]
            },
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ],
                \\"location\\": [
                    0,
                    4
                ],
                \\"contents\\": [],
                \\"render\\": [],
                \\"name\\": \\"Welcome\\",
                \\"spaceAfter\\": false,
                \\"spaceBefore\\": false
            }
        ]
    },
    \\"clockTower\\": {
        \\"key\\": \\"clockTower\\",
        \\"tag\\": \\"Feature\\",
        \\"global\\": false,
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ],
                \\"location\\": [
                    0,
                    1
                ],
                \\"contents\\": [],
                \\"render\\": [
                    {
                        \\"tag\\": \\"String\\",
                        \\"value\\": \\"A worn stone clock tower.\\"
                    }
                ],
                \\"name\\": \\"\\",
                \\"spaceAfter\\": false,
                \\"spaceBefore\\": false
            }
        ]
    },
    \\"ABC\\": {
        \\"key\\": \\"ABC\\",
        \\"tag\\": \\"Room\\",
        \\"global\\": false,
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ],
                \\"location\\": [
                    0,
                    2
                ],
                \\"contents\\": [],
                \\"render\\": [
                    {
                        \\"tag\\": \\"String\\",
                        \\"value\\": \\"Vortex\\"
                    },
                    {
                        \\"tag\\": \\"Link\\",
                        \\"to\\": \\"toggleOpen\\",
                        \\"text\\": \\"(toggle)\\",
                        \\"spaceBefore\\": true,
                        \\"spaceAfter\\": true,
                        \\"targetTag\\": \\"Action\\"
                    }
                ],
                \\"name\\": \\"Vortex\\",
                \\"spaceAfter\\": false,
                \\"spaceBefore\\": false
            },
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    },
                    {
                        \\"tag\\": \\"Condition\\",
                        \\"key\\": \\"Condition-0\\",
                        \\"index\\": 0
                    }
                ],
                \\"location\\": [
                    0,
                    3,
                    0
                ],
                \\"contents\\": [
                    {
                        \\"tag\\": \\"Exit\\",
                        \\"key\\": \\"ABC#DEF\\",
                        \\"index\\": 0
                    }
                ],
                \\"render\\": [],
                \\"name\\": \\"\\",
                \\"spaceAfter\\": false,
                \\"spaceBefore\\": false
            }
        ]
    },
    \\"DEF#ABC\\": {
        \\"tag\\": \\"Exit\\",
        \\"key\\": \\"DEF#ABC\\",
        \\"to\\": \\"ABC\\",
        \\"from\\": \\"DEF\\",
        \\"name\\": \\"vortex\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    },
                    {
                        \\"index\\": 1,
                        \\"key\\": \\"DEF\\",
                        \\"tag\\": \\"Room\\"
                    }
                ],
                \\"location\\": [
                    0,
                    2,
                    1
                ],
                \\"contents\\": []
            }
        ]
    },
    \\"Condition-0\\": {
        \\"key\\": \\"Condition-0\\",
        \\"tag\\": \\"Condition\\",
        \\"if\\": \\"open\\",
        \\"dependencies\\": [
            \\"open\\"
        ],
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ],
                \\"location\\": [
                    0,
                    3
                ],
                \\"contents\\": [
                    {
                        \\"key\\": \\"ABC\\",
                        \\"tag\\": \\"Room\\",
                        \\"index\\": 1
                    }
                ]
            }
        ]
    },
    \\"ABC#DEF\\": {
        \\"key\\": \\"ABC#DEF\\",
        \\"tag\\": \\"Exit\\",
        \\"to\\": \\"DEF\\",
        \\"from\\": \\"ABC\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    },
                    {
                        \\"tag\\": \\"Condition\\",
                        \\"key\\": \\"Condition-0\\",
                        \\"index\\": 0
                    },
                    {
                        \\"tag\\": \\"Room\\",
                        \\"key\\": \\"ABC\\",
                        \\"index\\": 1
                    }
                ],
                \\"location\\": [
                    0,
                    3,
                    0,
                    0
                ],
                \\"contents\\": []
            }
        ]
    },
    \\"open\\": {
        \\"key\\": \\"open\\",
        \\"tag\\": \\"Variable\\",
        \\"default\\": \\"false\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ],
                \\"location\\": [
                    0,
                    5
                ],
                \\"contents\\": []
            }
        ]
    },
    \\"toggleOpen\\": {
        \\"key\\": \\"toggleOpen\\",
        \\"tag\\": \\"Action\\",
        \\"src\\": \\"open = !open\\",
        \\"appearances\\": [
            {
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ],
                \\"location\\": [
                    0,
                    6
                ],
                \\"contents\\": []
            }
        ]
    }
}"
`;

exports[`LibraryAsset context provider should provide rooms 1`] = `
<div>
  <div>
    <div>
      <span>
        Welcome
      </span>
      <span>
        String
      </span>
      <span>
        A welcome area
      </span>
    </div>
    <div>
      <span>
        Vortex
      </span>
      <span>
        String
      </span>
      <span>
        Vortex
      </span>
      <span>
        Link
      </span>
      <span>
        toggleOpen
      </span>
    </div>
  </div>
</div>
`;
